RESOLVED FIXED127869
IDB: Index cursor preliminary support
https://bugs.webkit.org/show_bug.cgi?id=127869
Summary IDB: Index cursor preliminary support
Jon Lee
Reported 2014-01-29 16:30:16 PST
IDB: Index cursor advance() support <rdar://problem/15941915>
Attachments
Patch v1 (12.67 KB, patch)
2014-01-31 14:04 PST, Brady Eidson
sam: review+
Brady Eidson
Comment 1 2014-01-31 12:49:29 PST
The way advance() and iterate() are implemented, getting index cursors up and running *at all* will get both of those up and running partially. Retitling this bug to: IDB: Index cursor preliminary support Retitling bug https://bugs.webkit.org/show_bug.cgi?id=127870 to: IDB: Index cursor complete advance() and iterate() support
Brady Eidson
Comment 2 2014-01-31 14:04:44 PST
Created attachment 222847 [details] Patch v1
Brady Eidson
Comment 3 2014-01-31 14:05:53 PST
Style bot has two legitimate complaints - Fixed locally.
WebKit Commit Bot
Comment 4 2014-01-31 14:06:58 PST
Attachment 222847 [details] did not pass style-queue: ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:66: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:113: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 5 2014-01-31 14:13:45 PST
Note You need to log in before you can comment on or make changes to this bug.