IDB: Index cursor preliminary support https://bugs.webkit.org/show_bug.cgi?id=127869

Reviewed by Sam Weinig.

This gets index cursors running and - for some situations - returning results.

Bug 127870 will make them fully functional.

* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:
(WebKit::getIndexStatement): Using the key and sorting parameters, find the appropriate SQL
  statement to run an index cursor.
(WebKit::getObjectStoreStatement): Same, but for object store cursors.
(WebKit::SQLiteIDBCursor::establishStatement): Depending on the type of cursor, choose the
  correct SQL query and id to use.
(WebKit::SQLiteIDBCursor::createSQLiteStatement): With the passed in SQL and id, handle both
  index and object store cursors.
* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.h:

Canonical link: https://commits.webkit.org/146021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163200 268f45cc-cd09-0410-ab3c-d52691b4dbfc